--- a/train.ipynb
+++ b/train.ipynb
@@ -2,22 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c9542373-6611-4b24-a6c7-2979563b4e53/gptdev/gptenv/lib/python3.11/site-packages/torch/_subclasses/functional_tensor.py:275: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at /pytorch/torch/csrc/utils/tensor_numpy.cpp:81.)\n",
-      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([476250,  18899, 645194, 831150])\n",
       "tensor([[57,  1, 46, 47, 57,  1, 50, 53],\n",
       "        [ 1, 58, 46, 43, 56, 43,  1, 41],\n",
       "        [17, 26, 15, 17, 10,  0, 32, 53],\n",
@@ -102,7 +93,7 @@
     "    ix=torch.randint(len(data)-block_size,(batch_size,))\n",
     "    x=torch.stack(([data[i:i+block_size] for i in ix]))\n",
     "    y=torch.stack(([data[i+1:i+block_size+1] for i in ix]))\n",
-    "    print(ix)\n",
+    "    # print(ix)\n",
     "    return x,y\n",
     "xb,yb=getbatch(\"train\")\n",
     "print(xb)\n",
@@ -118,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x79966c471ab0>"
+       "<torch._C.Generator at 0x79f37418e730>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,22 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Expected input batch_size (32) to match target batch_size (4).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m logits,loss\n\u001b[1;32m     10\u001b[0m m\u001b[38;5;241m=\u001b[39mBigramLanguageModel(\u001b[38;5;28mlen\u001b[39m(voc))\n\u001b[0;32m---> 11\u001b[0m logit,loss\u001b[38;5;241m=\u001b[39m\u001b[43mm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxb\u001b[49m\u001b[43m,\u001b[49m\u001b[43myb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(logit\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss)\n",
-      "File \u001b[0;32m/mnt/c9542373-6611-4b24-a6c7-2979563b4e53/gptdev/gptenv/lib/python3.11/site-packages/torch/nn/modules/module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/mnt/c9542373-6611-4b24-a6c7-2979563b4e53/gptdev/gptenv/lib/python3.11/site-packages/torch/nn/modules/module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "Cell \u001b[0;32mIn[8], line 8\u001b[0m, in \u001b[0;36mBigramLanguageModel.forward\u001b[0;34m(self, xb, yb)\u001b[0m\n\u001b[1;32m      6\u001b[0m logits\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtoken_embedding_table(xb)\n\u001b[1;32m      7\u001b[0m B,C,T\u001b[38;5;241m=\u001b[39mlogits\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m----> 8\u001b[0m loss\u001b[38;5;241m=\u001b[39m\u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mB\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43mT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43myb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m logits,loss\n",
-      "File \u001b[0;32m/mnt/c9542373-6611-4b24-a6c7-2979563b4e53/gptdev/gptenv/lib/python3.11/site-packages/torch/nn/functional.py:3494\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   3492\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   3493\u001b[0m     reduction \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3494\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_nn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy_loss\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   3495\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3496\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3497\u001b[0m \u001b[43m    \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3498\u001b[0m \u001b[43m    \u001b[49m\u001b[43m_Reduction\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_enum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3499\u001b[0m \u001b[43m    \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3500\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3501\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected input batch_size (32) to match target batch_size (4)."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "uoiaF$z\n",
+      "M?kI;h\n",
+      "DbuMG,H3LYNmrDxKgTpvAKOF-jU.hc;fBMTGa-IS\n",
+      "g3lEb&ZQ,l;:m;lpcNN\n",
+      "KpVEYRIIM,'hCRbMAcWTkrnH\n"
      ]
     }
    ],
@@ -165,17 +153,106 @@
     "    def __init__(self, vocab_size):\n",
     "        super().__init__()\n",
     "        self.token_embedding_table=nn.Embedding(vocab_size,vocab_size)\n",
-    "    def forward(self, xb,yb):\n",
+    "    def forward(self, xb,yb=None):\n",
     "        logits=self.token_embedding_table(xb)\n",
-    "        B,C,T=logits.shape\n",
-    "        loss=F.cross_entropy(logits.reshape(B*C,T),yb.reshape(B*C))\n",
+    "      \n",
+    "        if yb is not None:\n",
+    "            B,C,T=logits.shape\n",
+    "            logits=logits.view(B*C,T)\n",
+    "            yb=yb.view(B*C)\n",
+    "\n",
+    "            loss=F.cross_entropy(logits,yb)\n",
+    "        else:\n",
+    "            loss=None\n",
     "        return logits,loss\n",
+    "\n",
+    "    def generate(self, idx, max_new_tokens): \n",
+    "        # idx is (B, T) array of indices in the current context \n",
+    "        for _ in range(max_new_tokens):  \n",
+    "            # get the predictions \n",
+    "            logits, loss = self(idx)  \n",
+    "\n",
+    "            # focus only on the last time step \n",
+    "            # print(logits)\n",
+    "            logits = logits[:, -1, :]  # becomes (B, C)  \n",
+    "            # print(logits)\n",
+    "\n",
+    "            # apply softmax to get probabilities  \n",
+    "            probs = F.softmax(logits, dim=-1)  # (B, C)  \n",
+    "\n",
+    "            # sample from the distribution  \n",
+    "            idx_next = torch.multinomial(probs, num_samples=1)  # (B, 1)  \n",
+    "\n",
+    "            # append sampled index to the running sequence  \n",
+    "            idx = torch.cat((idx, idx_next), dim=1)  # (B, T+1) \n",
+    "            # print(idx) \n",
+    "\n",
+    "        return idx\n",
+    "\n",
     "m=BigramLanguageModel(len(voc))\n",
     "logit,loss=m(xb,yb)\n",
-    "print(logit.shape)\n",
-    "print(loss)\n",
+    "# print(logit.shape)\n",
+    "# print(loss)\n",
     "        \n",
-    "print(len(voc))"
+    "# print(len(voc))\n",
+    "\n",
+    "print(decoding(m.generate(idx=torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0, 15, 39, 52, 46, 40, 39, 44, 64, 48, 35, 56,  6, 25, 60, 47, 39,  1,\n",
+       "         58,  5, 28, 43, 50,  5, 42,  1,  1, 43,  1, 63, 46, 39,  9, 52,  0, 58,\n",
+       "         43, 17, 61, 44, 18, 24, 17, 21, 25, 13, 25, 28, 20, 20, 17, 31, 49, 12,\n",
+       "          7, 40, 53, 53, 59, 51, 39, 51, 32, 47, 39,  7, 21, 52, 43, 51, 39, 42,\n",
+       "          2, 41,  8,  0, 24, 32,  1, 17, 35, 20, 24, 14,  2,  4,  6,  1, 58, 59,\n",
+       "         25, 60, 49, 12, 61, 33,  1, 57, 57, 47, 53]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.generate(idx=torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"\"\"gBXCYUEBUkTrhlwhYvCHU3jVQWIOVFHSbBtlnSfFoHZK.nHR&AcjvfzzJ.K,HCYUui-xd\n",
+    "L;Wu3VnSgv.$afs\n",
+    "BqpdHVLgwcOwN \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer=torch.optim.AdamW(m.parameters(),lr=0.001)\n"
    ]
   },
   {
@@ -184,6 +261,140 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1, Loss: 3.1633\n",
+      "Step 101, Loss: 3.0629\n",
+      "Step 201, Loss: 3.1231\n",
+      "Step 301, Loss: 2.9733\n",
+      "Step 401, Loss: 3.0888\n",
+      "Step 501, Loss: 2.9932\n",
+      "Step 601, Loss: 2.8694\n",
+      "Step 701, Loss: 2.9049\n",
+      "Step 801, Loss: 2.9283\n",
+      "Step 901, Loss: 2.8630\n",
+      "Step 1001, Loss: 2.8598\n",
+      "Step 1101, Loss: 2.9170\n",
+      "Step 1201, Loss: 2.7032\n",
+      "Step 1301, Loss: 2.7869\n",
+      "Step 1401, Loss: 2.7989\n",
+      "Step 1501, Loss: 2.6292\n",
+      "Step 1601, Loss: 2.7759\n",
+      "Step 1701, Loss: 2.7046\n",
+      "Step 1801, Loss: 2.6092\n",
+      "Step 1901, Loss: 2.5815\n",
+      "Step 2001, Loss: 2.6210\n",
+      "Step 2101, Loss: 2.6367\n",
+      "Step 2201, Loss: 2.6492\n",
+      "Step 2301, Loss: 2.6701\n",
+      "Step 2401, Loss: 2.6539\n",
+      "Step 2501, Loss: 2.6140\n",
+      "Step 2601, Loss: 2.5384\n",
+      "Step 2701, Loss: 2.7407\n",
+      "Step 2801, Loss: 2.5222\n",
+      "Step 2901, Loss: 2.6269\n",
+      "Step 3001, Loss: 2.5507\n",
+      "Step 3101, Loss: 2.5608\n",
+      "Step 3201, Loss: 2.5470\n",
+      "Step 3301, Loss: 2.5149\n",
+      "Step 3401, Loss: 2.5263\n",
+      "Step 3501, Loss: 2.4625\n",
+      "Step 3601, Loss: 2.5614\n",
+      "Step 3701, Loss: 2.6202\n",
+      "Step 3801, Loss: 2.5995\n",
+      "Step 3901, Loss: 2.5212\n",
+      "Step 4001, Loss: 2.5573\n",
+      "Step 4101, Loss: 2.5108\n",
+      "Step 4201, Loss: 2.5451\n",
+      "Step 4301, Loss: 2.4262\n",
+      "Step 4401, Loss: 2.4942\n",
+      "Step 4501, Loss: 2.4320\n",
+      "Step 4601, Loss: 2.6768\n",
+      "Step 4701, Loss: 2.5536\n",
+      "Step 4801, Loss: 2.4954\n",
+      "Step 4901, Loss: 2.4085\n",
+      "Step 5001, Loss: 2.3856\n",
+      "Step 5101, Loss: 2.5597\n",
+      "Step 5201, Loss: 2.5067\n",
+      "Step 5301, Loss: 2.4465\n",
+      "Step 5401, Loss: 2.4949\n",
+      "Step 5501, Loss: 2.3700\n",
+      "Step 5601, Loss: 2.4278\n",
+      "Step 5701, Loss: 2.4073\n",
+      "Step 5801, Loss: 2.3595\n",
+      "Step 5901, Loss: 2.4520\n",
+      "Step 6001, Loss: 2.5282\n",
+      "Step 6101, Loss: 2.4409\n",
+      "Step 6201, Loss: 2.5790\n",
+      "Step 6301, Loss: 2.4648\n",
+      "Step 6401, Loss: 2.5079\n",
+      "Step 6501, Loss: 2.5864\n",
+      "Step 6601, Loss: 2.4633\n",
+      "Step 6701, Loss: 2.5088\n",
+      "Step 6801, Loss: 2.4264\n",
+      "Step 6901, Loss: 2.5013\n",
+      "Step 7001, Loss: 2.4003\n",
+      "Step 7101, Loss: 2.4489\n",
+      "Step 7201, Loss: 2.4928\n",
+      "Step 7301, Loss: 2.4945\n",
+      "Step 7401, Loss: 2.4609\n",
+      "Step 7501, Loss: 2.4101\n",
+      "Step 7601, Loss: 2.4860\n",
+      "Step 7701, Loss: 2.4334\n",
+      "Step 7801, Loss: 2.5789\n",
+      "Step 7901, Loss: 2.5258\n",
+      "Step 8001, Loss: 2.4072\n",
+      "Step 8101, Loss: 2.4883\n",
+      "Step 8201, Loss: 2.4767\n",
+      "Step 8301, Loss: 2.4218\n",
+      "Step 8401, Loss: 2.4874\n",
+      "Step 8501, Loss: 2.5656\n",
+      "Step 8601, Loss: 2.5018\n",
+      "Step 8701, Loss: 2.5037\n",
+      "Step 8801, Loss: 2.6091\n",
+      "Step 8901, Loss: 2.3804\n",
+      "Step 9001, Loss: 2.4795\n",
+      "Step 9101, Loss: 2.4315\n",
+      "Step 9201, Loss: 2.4073\n",
+      "Step 9301, Loss: 2.4474\n",
+      "Step 9401, Loss: 2.4725\n",
+      "Step 9501, Loss: 2.5027\n",
+      "Step 9601, Loss: 2.5634\n",
+      "Step 9701, Loss: 2.4970\n",
+      "Step 9801, Loss: 2.5398\n",
+      "Step 9901, Loss: 2.4342\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 32\n",
+    "\n",
+    "for steps in range(10000):\n",
+    "    xb, yb = getbatch('train')\n",
+    "    logits, loss = m(xb, yb)\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    if steps % 100 == 0:\n",
+    "        print(f\"Step {steps+1}, Loss: {loss.item():.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(decoding(m.generate(idx=torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)[0].tolist()))"
+   ]
   }
  ],
  "metadata": {
