mean of prevoius elements

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c9542373-6611-4b24-a6c7-2979563b4e53/gptdev/gptenv/lib/python3.11/site-packages/torch/_subclasses/functional_tensor.py:275: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at /pytorch/torch/csrc/utils/tensor_numpy.cpp:81.)\n",
+      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -109,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x79f37418e730>"
+       "<torch._C.Generator at 0x79f2c57720b0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,21 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0, 15, 39, 52, 46, 40, 39, 44, 64, 48, 35, 56,  6, 25, 60, 47, 39,  1,\n",
-       "         58,  5, 28, 43, 50,  5, 42,  1,  1, 43,  1, 63, 46, 39,  9, 52,  0, 58,\n",
-       "         43, 17, 61, 44, 18, 24, 17, 21, 25, 13, 25, 28, 20, 20, 17, 31, 49, 12,\n",
-       "          7, 40, 53, 53, 59, 51, 39, 51, 32, 47, 39,  7, 21, 52, 43, 51, 39, 42,\n",
-       "          2, 41,  8,  0, 24, 32,  1, 17, 35, 20, 24, 14,  2,  4,  6,  1, 58, 59,\n",
-       "         25, 60, 49, 12, 61, 33,  1, 57, 57, 47, 53]])"
+       "tensor([[ 0, 16, 23, 34, 39, 51,  4, 23,  9, 38, 52, 49, 21, 25, 39, 55, 52, 58,\n",
+       "         48, 46,  7, 13, 35,  5, 14, 22, 62, 62, 45, 46, 48, 38, 32, 14, 15, 52,\n",
+       "         15, 33, 12, 55, 14, 29, 40, 61, 63, 15, 48, 46, 30, 46, 31, 24, 63, 22,\n",
+       "         44, 19, 58, 57, 59, 58, 22, 14, 63,  7, 48,  4,  6, 56,  6,  5, 49,  3,\n",
+       "         28, 32, 59, 38, 51,  9, 58, 28, 40, 59,  1, 26, 61, 20,  7, 21, 28, 43,\n",
+       "         39, 55, 59, 22, 34, 56, 23,  5, 62,  1, 44]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +243,7 @@
        "100"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,113 +272,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1, Loss: 3.1633\n",
-      "Step 101, Loss: 3.0629\n",
-      "Step 201, Loss: 3.1231\n",
-      "Step 301, Loss: 2.9733\n",
-      "Step 401, Loss: 3.0888\n",
-      "Step 501, Loss: 2.9932\n",
-      "Step 601, Loss: 2.8694\n",
-      "Step 701, Loss: 2.9049\n",
-      "Step 801, Loss: 2.9283\n",
-      "Step 901, Loss: 2.8630\n",
-      "Step 1001, Loss: 2.8598\n",
-      "Step 1101, Loss: 2.9170\n",
-      "Step 1201, Loss: 2.7032\n",
-      "Step 1301, Loss: 2.7869\n",
-      "Step 1401, Loss: 2.7989\n",
-      "Step 1501, Loss: 2.6292\n",
-      "Step 1601, Loss: 2.7759\n",
-      "Step 1701, Loss: 2.7046\n",
-      "Step 1801, Loss: 2.6092\n",
-      "Step 1901, Loss: 2.5815\n",
-      "Step 2001, Loss: 2.6210\n",
-      "Step 2101, Loss: 2.6367\n",
-      "Step 2201, Loss: 2.6492\n",
-      "Step 2301, Loss: 2.6701\n",
-      "Step 2401, Loss: 2.6539\n",
-      "Step 2501, Loss: 2.6140\n",
-      "Step 2601, Loss: 2.5384\n",
-      "Step 2701, Loss: 2.7407\n",
-      "Step 2801, Loss: 2.5222\n",
-      "Step 2901, Loss: 2.6269\n",
-      "Step 3001, Loss: 2.5507\n",
-      "Step 3101, Loss: 2.5608\n",
-      "Step 3201, Loss: 2.5470\n",
-      "Step 3301, Loss: 2.5149\n",
-      "Step 3401, Loss: 2.5263\n",
-      "Step 3501, Loss: 2.4625\n",
-      "Step 3601, Loss: 2.5614\n",
-      "Step 3701, Loss: 2.6202\n",
-      "Step 3801, Loss: 2.5995\n",
-      "Step 3901, Loss: 2.5212\n",
-      "Step 4001, Loss: 2.5573\n",
-      "Step 4101, Loss: 2.5108\n",
-      "Step 4201, Loss: 2.5451\n",
-      "Step 4301, Loss: 2.4262\n",
-      "Step 4401, Loss: 2.4942\n",
-      "Step 4501, Loss: 2.4320\n",
-      "Step 4601, Loss: 2.6768\n",
-      "Step 4701, Loss: 2.5536\n",
-      "Step 4801, Loss: 2.4954\n",
-      "Step 4901, Loss: 2.4085\n",
-      "Step 5001, Loss: 2.3856\n",
-      "Step 5101, Loss: 2.5597\n",
-      "Step 5201, Loss: 2.5067\n",
-      "Step 5301, Loss: 2.4465\n",
-      "Step 5401, Loss: 2.4949\n",
-      "Step 5501, Loss: 2.3700\n",
-      "Step 5601, Loss: 2.4278\n",
-      "Step 5701, Loss: 2.4073\n",
-      "Step 5801, Loss: 2.3595\n",
-      "Step 5901, Loss: 2.4520\n",
-      "Step 6001, Loss: 2.5282\n",
-      "Step 6101, Loss: 2.4409\n",
-      "Step 6201, Loss: 2.5790\n",
-      "Step 6301, Loss: 2.4648\n",
-      "Step 6401, Loss: 2.5079\n",
-      "Step 6501, Loss: 2.5864\n",
-      "Step 6601, Loss: 2.4633\n",
-      "Step 6701, Loss: 2.5088\n",
-      "Step 6801, Loss: 2.4264\n",
-      "Step 6901, Loss: 2.5013\n",
-      "Step 7001, Loss: 2.4003\n",
-      "Step 7101, Loss: 2.4489\n",
-      "Step 7201, Loss: 2.4928\n",
-      "Step 7301, Loss: 2.4945\n",
-      "Step 7401, Loss: 2.4609\n",
-      "Step 7501, Loss: 2.4101\n",
-      "Step 7601, Loss: 2.4860\n",
-      "Step 7701, Loss: 2.4334\n",
-      "Step 7801, Loss: 2.5789\n",
-      "Step 7901, Loss: 2.5258\n",
-      "Step 8001, Loss: 2.4072\n",
-      "Step 8101, Loss: 2.4883\n",
-      "Step 8201, Loss: 2.4767\n",
-      "Step 8301, Loss: 2.4218\n",
-      "Step 8401, Loss: 2.4874\n",
-      "Step 8501, Loss: 2.5656\n",
-      "Step 8601, Loss: 2.5018\n",
-      "Step 8701, Loss: 2.5037\n",
-      "Step 8801, Loss: 2.6091\n",
-      "Step 8901, Loss: 2.3804\n",
-      "Step 9001, Loss: 2.4795\n",
-      "Step 9101, Loss: 2.4315\n",
-      "Step 9201, Loss: 2.4073\n",
-      "Step 9301, Loss: 2.4474\n",
-      "Step 9401, Loss: 2.4725\n",
-      "Step 9501, Loss: 2.5027\n",
-      "Step 9601, Loss: 2.5634\n",
-      "Step 9701, Loss: 2.4970\n",
-      "Step 9801, Loss: 2.5398\n",
-      "Step 9901, Loss: 2.4342\n"
+      "Step 1, Loss: 4.6977\n",
+      "Step 101, Loss: 4.5542\n",
+      "Step 201, Loss: 4.4854\n",
+      "Step 301, Loss: 4.3880\n",
+      "Step 401, Loss: 4.2180\n",
+      "Step 501, Loss: 4.2192\n",
+      "Step 601, Loss: 4.0598\n",
+      "Step 701, Loss: 3.9743\n",
+      "Step 801, Loss: 3.9993\n",
+      "Step 901, Loss: 3.9300\n",
+      "Step 1001, Loss: 3.7942\n",
+      "Step 1101, Loss: 3.8274\n",
+      "Step 1201, Loss: 3.5697\n",
+      "Step 1301, Loss: 3.4974\n",
+      "Step 1401, Loss: 3.5198\n",
+      "Step 1501, Loss: 3.3823\n",
+      "Step 1601, Loss: 3.4163\n",
+      "Step 1701, Loss: 3.3589\n",
+      "Step 1801, Loss: 3.3072\n",
+      "Step 1901, Loss: 3.2026\n",
+      "Step 2001, Loss: 3.1628\n",
+      "Step 2101, Loss: 3.0630\n",
+      "Step 2201, Loss: 3.1235\n",
+      "Step 2301, Loss: 2.9732\n",
+      "Step 2401, Loss: 3.0888\n",
+      "Step 2501, Loss: 2.9927\n",
+      "Step 2601, Loss: 2.8689\n",
+      "Step 2701, Loss: 2.9053\n",
+      "Step 2801, Loss: 2.9279\n",
+      "Step 2901, Loss: 2.8635\n",
+      "Step 3001, Loss: 2.8600\n",
+      "Step 3101, Loss: 2.9175\n",
+      "Step 3201, Loss: 2.7034\n",
+      "Step 3301, Loss: 2.7863\n",
+      "Step 3401, Loss: 2.7986\n",
+      "Step 3501, Loss: 2.6293\n",
+      "Step 3601, Loss: 2.7755\n",
+      "Step 3701, Loss: 2.7048\n",
+      "Step 3801, Loss: 2.6091\n",
+      "Step 3901, Loss: 2.5815\n",
+      "Step 4001, Loss: 2.6208\n",
+      "Step 4101, Loss: 2.6359\n",
+      "Step 4201, Loss: 2.6495\n",
+      "Step 4301, Loss: 2.6701\n",
+      "Step 4401, Loss: 2.6540\n",
+      "Step 4501, Loss: 2.6137\n",
+      "Step 4601, Loss: 2.5385\n",
+      "Step 4701, Loss: 2.7403\n",
+      "Step 4801, Loss: 2.5221\n",
+      "Step 4901, Loss: 2.6266\n",
+      "Step 5001, Loss: 2.5505\n",
+      "Step 5101, Loss: 2.5610\n",
+      "Step 5201, Loss: 2.5470\n",
+      "Step 5301, Loss: 2.5149\n",
+      "Step 5401, Loss: 2.5262\n",
+      "Step 5501, Loss: 2.4623\n",
+      "Step 5601, Loss: 2.5615\n",
+      "Step 5701, Loss: 2.6202\n",
+      "Step 5801, Loss: 2.5995\n",
+      "Step 5901, Loss: 2.5212\n",
+      "Step 6001, Loss: 2.5571\n",
+      "Step 6101, Loss: 2.5108\n",
+      "Step 6201, Loss: 2.5454\n",
+      "Step 6301, Loss: 2.4263\n",
+      "Step 6401, Loss: 2.4940\n",
+      "Step 6501, Loss: 2.4318\n",
+      "Step 6601, Loss: 2.6770\n",
+      "Step 6701, Loss: 2.5536\n",
+      "Step 6801, Loss: 2.4955\n",
+      "Step 6901, Loss: 2.4084\n",
+      "Step 7001, Loss: 2.3854\n",
+      "Step 7101, Loss: 2.5597\n",
+      "Step 7201, Loss: 2.5068\n",
+      "Step 7301, Loss: 2.4465\n",
+      "Step 7401, Loss: 2.4949\n",
+      "Step 7501, Loss: 2.3700\n",
+      "Step 7601, Loss: 2.4280\n",
+      "Step 7701, Loss: 2.4072\n",
+      "Step 7801, Loss: 2.3597\n",
+      "Step 7901, Loss: 2.4519\n",
+      "Step 8001, Loss: 2.5282\n",
+      "Step 8101, Loss: 2.4408\n",
+      "Step 8201, Loss: 2.5789\n",
+      "Step 8301, Loss: 2.4648\n",
+      "Step 8401, Loss: 2.5081\n",
+      "Step 8501, Loss: 2.5864\n",
+      "Step 8601, Loss: 2.4633\n",
+      "Step 8701, Loss: 2.5087\n",
+      "Step 8801, Loss: 2.4265\n",
+      "Step 8901, Loss: 2.5012\n",
+      "Step 9001, Loss: 2.4003\n",
+      "Step 9101, Loss: 2.4489\n",
+      "Step 9201, Loss: 2.4928\n",
+      "Step 9301, Loss: 2.4946\n",
+      "Step 9401, Loss: 2.4609\n",
+      "Step 9501, Loss: 2.4100\n",
+      "Step 9601, Loss: 2.4860\n",
+      "Step 9701, Loss: 2.4334\n",
+      "Step 9801, Loss: 2.5789\n",
+      "Step 9901, Loss: 2.5258\n"
      ]
     }
    ],
@@ -389,12 +397,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "RY:\n",
+      "Yors t p kere isd, m INGea earusher Tistced.\n",
+      "Wharologo!\n",
+      "\n",
+      "\n",
+      "Whe hildy por byof?\n",
+      "GUFarastaldXIndesw\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decoding(m.generate(idx=torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 2.9726e-01, -5.3681e-01],\n",
+      "         [-1.3679e+00,  2.2713e-01],\n",
+      "         [ 6.6278e-01,  1.2792e+00],\n",
+      "         [ 2.9264e-01, -1.6278e+00],\n",
+      "         [ 9.1153e-01,  4.2587e-01],\n",
+      "         [-1.1263e+00,  4.3486e-01],\n",
+      "         [ 7.7881e-02, -9.2331e-04],\n",
+      "         [-4.6095e-01,  8.0461e-02]],\n",
+      "\n",
+      "        [[ 1.4424e+00,  8.2810e-01],\n",
+      "         [ 1.9602e+00,  3.3469e-01],\n",
+      "         [ 1.3711e+00, -9.8776e-01],\n",
+      "         [ 4.3299e-01,  7.8188e-01],\n",
+      "         [-7.4836e-01,  7.1294e-01],\n",
+      "         [ 4.7777e-01, -2.2202e+00],\n",
+      "         [-4.1058e-01, -3.8679e-01],\n",
+      "         [ 1.1042e+00,  6.1346e-01]],\n",
+      "\n",
+      "        [[-2.5959e+00,  6.8694e-01],\n",
+      "         [ 4.9073e-01,  7.2949e-01],\n",
+      "         [ 8.7908e-01,  3.2066e-01],\n",
+      "         [-3.7597e-01,  5.8821e-01],\n",
+      "         [-1.4407e-01,  6.4622e-01],\n",
+      "         [ 1.0630e+00,  4.9461e-01],\n",
+      "         [-5.5890e-01, -6.0898e-01],\n",
+      "         [-2.2578e+00,  1.5034e+00]],\n",
+      "\n",
+      "        [[ 8.6349e-01,  2.8729e-01],\n",
+      "         [-4.7508e-01,  1.4988e+00],\n",
+      "         [-4.0067e-01,  1.1432e+00],\n",
+      "         [-1.6107e+00, -1.8666e+00],\n",
+      "         [-3.9583e-02,  8.9766e-01],\n",
+      "         [-1.3734e+00, -1.3817e-01],\n",
+      "         [-1.2926e-01, -1.9798e-01],\n",
+      "         [ 8.1273e-02, -3.8224e-01]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "B,T,C=4,8,2\n",
+    "x=torch.randn(B,T,C)\n",
+    "xbow=torch.zeros(B,T,C)\n",
+    "print(x)\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev=x[b,:t+1]\n",
+    "        xbow[b,t]=torch.mean(xprev,dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(decoding(m.generate(idx=torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)[0].tolist()))"
+    "x[0],xbow[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
