--- a/train.ipynb
+++ b/train.ipynb
@@ -123,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x79f2c57720b0>"
+       "<torch._C.Generator at 0x7bc214375ff0>"
       ]
      },
      "execution_count": 3,
@@ -421,48 +421,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 2.9726e-01, -5.3681e-01],\n",
-      "         [-1.3679e+00,  2.2713e-01],\n",
-      "         [ 6.6278e-01,  1.2792e+00],\n",
-      "         [ 2.9264e-01, -1.6278e+00],\n",
-      "         [ 9.1153e-01,  4.2587e-01],\n",
-      "         [-1.1263e+00,  4.3486e-01],\n",
-      "         [ 7.7881e-02, -9.2331e-04],\n",
-      "         [-4.6095e-01,  8.0461e-02]],\n",
+      "tensor([[[ 1.1583,  1.0940],\n",
+      "         [-0.1402,  0.1227],\n",
+      "         [-1.7025,  0.6909],\n",
+      "         [-0.5811,  1.5571],\n",
+      "         [-0.0903, -0.4272],\n",
+      "         [ 1.1420,  1.8703],\n",
+      "         [-0.5932, -1.6216],\n",
+      "         [ 0.0837,  0.4461]],\n",
       "\n",
-      "        [[ 1.4424e+00,  8.2810e-01],\n",
-      "         [ 1.9602e+00,  3.3469e-01],\n",
-      "         [ 1.3711e+00, -9.8776e-01],\n",
-      "         [ 4.3299e-01,  7.8188e-01],\n",
-      "         [-7.4836e-01,  7.1294e-01],\n",
-      "         [ 4.7777e-01, -2.2202e+00],\n",
-      "         [-4.1058e-01, -3.8679e-01],\n",
-      "         [ 1.1042e+00,  6.1346e-01]],\n",
+      "        [[-0.7926, -1.6044],\n",
+      "         [ 0.3674, -0.3286],\n",
+      "         [-1.3446,  0.2414],\n",
+      "         [-1.3129,  0.1608],\n",
+      "         [ 1.4516, -2.6770],\n",
+      "         [ 1.0325,  0.0754],\n",
+      "         [-1.2991, -0.3834],\n",
+      "         [-0.0684, -3.1754]],\n",
       "\n",
-      "        [[-2.5959e+00,  6.8694e-01],\n",
-      "         [ 4.9073e-01,  7.2949e-01],\n",
-      "         [ 8.7908e-01,  3.2066e-01],\n",
-      "         [-3.7597e-01,  5.8821e-01],\n",
-      "         [-1.4407e-01,  6.4622e-01],\n",
-      "         [ 1.0630e+00,  4.9461e-01],\n",
-      "         [-5.5890e-01, -6.0898e-01],\n",
-      "         [-2.2578e+00,  1.5034e+00]],\n",
+      "        [[ 0.2173,  1.4930],\n",
+      "         [-2.7524,  1.2803],\n",
+      "         [-0.2602, -1.3573],\n",
+      "         [ 0.1989,  1.4771],\n",
+      "         [-0.8706, -1.1885],\n",
+      "         [ 0.9991, -0.3465],\n",
+      "         [-0.6703,  0.1645],\n",
+      "         [ 0.6289, -0.3070]],\n",
       "\n",
-      "        [[ 8.6349e-01,  2.8729e-01],\n",
-      "         [-4.7508e-01,  1.4988e+00],\n",
-      "         [-4.0067e-01,  1.1432e+00],\n",
-      "         [-1.6107e+00, -1.8666e+00],\n",
-      "         [-3.9583e-02,  8.9766e-01],\n",
-      "         [-1.3734e+00, -1.3817e-01],\n",
-      "         [-1.2926e-01, -1.9798e-01],\n",
-      "         [ 8.1273e-02, -3.8224e-01]]])\n"
+      "        [[ 1.2607,  0.2722],\n",
+      "         [ 0.4268, -0.3683],\n",
+      "         [-0.9086,  1.8521],\n",
+      "         [ 2.4499, -1.9422],\n",
+      "         [ 0.4257,  0.0806],\n",
+      "         [ 0.5172,  0.9361],\n",
+      "         [-0.0533,  0.8518],\n",
+      "         [ 0.7028,  0.8040]]])\n"
      ]
     }
    ],
@@ -479,11 +479,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 1.1583,  1.0940],\n",
+       "         [-0.1402,  0.1227],\n",
+       "         [-1.7025,  0.6909],\n",
+       "         [-0.5811,  1.5571],\n",
+       "         [-0.0903, -0.4272],\n",
+       "         [ 1.1420,  1.8703],\n",
+       "         [-0.5932, -1.6216],\n",
+       "         [ 0.0837,  0.4461]]),\n",
+       " tensor([[ 1.1583,  1.0940],\n",
+       "         [ 0.5091,  0.6083],\n",
+       "         [-0.2281,  0.6359],\n",
+       "         [-0.3164,  0.8662],\n",
+       "         [-0.2712,  0.6075],\n",
+       "         [-0.0356,  0.8180],\n",
+       "         [-0.1153,  0.4695],\n",
+       "         [-0.0904,  0.4665]]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0],xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[0],xbow[0]"
+    "torch.manual_seed(42)\n",
+    "a=torch.tril(torch.ones(3,3,dtype=torch.float))\n",
+    "b=torch.randint(0,10,(3,2),dtype=torch.float)\n",
+    "c=a@b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 0., 0.],\n",
+       "         [1., 1., 0.],\n",
+       "         [1., 1., 1.]]),\n",
+       " tensor([[2., 7.],\n",
+       "         [6., 4.],\n",
+       "         [6., 5.]]))"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=a/torch.sum(a,dim=1,keepdim=True)\n",
+    "# b=torch.sum(a,dim=1)\n",
+    "\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+       "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+       "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v=torch.tril(torch.ones(T,T))\n",
+    "v=v/torch.sum(v,dim=1,keepdim=True)\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+       "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+       "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# s=v/torch.sum(v,dim=1)\n",
+    "# s\n"
    ]
   },
   {
